# job_app_tracker

./: .gitignore  Dockerfile  README.md  deploy.py  docker-compose.yml  google_adk_docs.txt  main.py  pyproject.toml
agent-frontend/app/: layout.tsx  page.tsx
applyflow_agents/: main.py  pyproject.toml
applyflow_agents/application_agent/: __init__.py  application_agent.py
applyflow_agents/application_agent/tools/: application_tools.py
applyflow_agents/insight_agent/: insight_agent.py
applyflow_agents/insight_agent/tools/: analysis_tools.py
applyflow_agents/resume_agent/: resume_agent.py
applyflow_agents/resume_agent/tools/: resume_tools.py
backend/: db.py  main.py  pyproject.toml  requirements.txt  settings.py
backend/core/: config.py  settings.py
backend/db/: session.py
backend/models/: chat_models.py  data_models.py  models.py
backend/routers/: applications.py  chat.py
backend/schemas/: applications.py
backend/services/: applications.py
frontend/: .env.example  CHAT_INTERFACE.md  README.md  index.html  package-lock.json  package.json  server.ts
frontend/src/: App.tsx  LoginButton.tsx  LogoutButton.tsx  Profile.tsx  index.css  main.tsx  mockData.ts  types.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ActivityTimeline.tsx  LandingPage.tsx  MessageBubble.tsx  ProtectedRoute.tsx  SessionSelector.tsx  app-sidebar.tsx  columns.tsx  data-table.tsx  data-table.tsx.tsx  dnd.tsx  (+4 more)
job_application_agent/: agent.py  main.py  pyproject.toml
job_application_agent/agent/: agent.py
migrations/: 001_init.sql
spa/: .env.example  package-lock.json  server.ts
spa/src/: App.tsx  main.tsx
(+26 files in other folders)
