[project]
name = "job-app-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.123.10",
    "firebase-admin>=6.9.0",
    "google-adk>=1.21.0",
    "google-cloud-aiplatform[adk,ag2,agent-engines,langchain,llama-index]>=1.112.0",
    "sse-starlette>=3.0.4",
]
