[project]
name = "applyflow-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag-ui-adk>=0.4.0",
    "fastapi>=0.123.10",
    "google-adk>=1.21.0",
    "google-cloud-aiplatform[adk,ag2,agent-engines,langchain,llama-index]>=1.112.0",
    "sse-starlette>=3.0.4",
]
