[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi-clerk-auth>=0.0.9",
    "fastapi[standard]==0.123.10",
    "google-cloud-aiplatform>=1.60.0",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.0.0",
    "sqlmodel>=0.0.27",
    "sse-starlette>=3.0.4",
]
